# isabl-skills

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  SUMMARY.md
knowledge/: README.md  knowledge.yaml  pyproject.toml
knowledge/data/: documents.json
knowledge/output/: TREE.md  tree.html  tree.json
knowledge/output/site/: README.md
knowledge/output/site/api-client-resource-utilities/: README.md
knowledge/output/site/api-client-resource-utilities/analysis-results-status-helpers/: README.md
knowledge/output/site/api-client-resource-utilities/http-auth-networking/: README.md
knowledge/output/site/api-client-resource-utilities/pagination-filters-iteration/: README.md
knowledge/output/site/api-client-resource-utilities/resource-crud-retrieval/: README.md
knowledge/output/site/api-client-resource-utilities/serialization-isabldict-utilities/: README.md
knowledge/output/site/api-http-helpers/: README.md
knowledge/output/site/api-http-helpers/analysis-specific-api-helpers-notifications/: README.md
knowledge/output/site/api-http-helpers/authentication-token-management/: README.md
knowledge/output/site/api-http-helpers/http-request-helpers/: README.md
knowledge/output/site/api-models-serializers-endpoints/: README.md
knowledge/output/site/application-framework-lifecycle/: README.md
knowledge/output/site/applications-analyses-merging/: README.md
knowledge/output/site/applications-analysis-workflows/: README.md
knowledge/output/site/batch-systems-job-execution/: README.md
knowledge/output/site/cli-commands-user-tools/: README.md
knowledge/output/site/cli-usage-commands-options/: README.md
knowledge/output/site/cli-usage-tooling/: README.md
knowledge/output/site/configuration-settings-deployment/: README.md
knowledge/output/site/data-import-storage-management/: README.md
knowledge/output/site/data-management-import/: README.md
knowledge/output/site/documentation-getting-started/: README.md
knowledge/output/site/documentation-guides/: README.md
knowledge/output/site/documentation-onboarding/: README.md
knowledge/output/site/exceptions-validators/: README.md
knowledge/output/site/execution-batch-systems/: README.md
knowledge/output/site/factories-options-small-helpers/: README.md
knowledge/output/site/job-submission-batch-systems/: README.md
knowledge/output/site/settings-configuration/: README.md
knowledge/output/site/signals-automation/: README.md
knowledge/output/site/utilities-errors-validation/: README.md
knowledge/output/site/utilities-filesystem-helpers/: README.md
knowledge/output/site/utilities-validation-errors/: README.md
knowledge/src/isabl_knowledge/: __init__.py  cli.py  config.py  eval.py  llm.py  mcp_server.py  models.py  summarizer.py  tree_builder.py
knowledge/src/isabl_knowledge/extractors/: __init__.py  base.py  django_api.py  gitbook.py  github_python.py  openapi.py  registry.py
knowledge/src/isabl_knowledge/renderers/: __init__.py  github_repo.py  html_tree.py  mermaid.py
knowledge/tests/: conftest.py  test_cli.py  test_config.py  test_gitbook_extractor.py  test_github_renderer.py  test_mcp_server.py  test_models.py  test_python_extractor.py  test_summarizer.py  test_tree_builder.py
mcp-server/: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
mcp-server/isabl_mcp/: __init__.py  config.py  server.py
mcp-server/isabl_mcp/clients/: __init__.py  isabl_api.py
mcp-server/isabl_mcp/tools/: __init__.py  aggregation.py  apps.py  data.py
mcp-server/tests/: __init__.py  conftest.py  test_aggregation_tools.py  test_api_client.py  test_app_tools.py  test_data_tools.py  test_error_handling.py  test_integration.py  test_server.py
(+137 files in other folders)
