[project]
name = "isabl-mcp"
version = "0.1.0"
description = "MCP server for Isabl genomics platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Isabl Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
isabl-mcp = "isabl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isabl_mcp"]
