[project]
name = "isabl-mcp"
version = "0.1.0"
description = "MCP server providing AI agents access to the Isabl genomics platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Isabl Team", email = "support@isabl.io" }
]
maintainers = [
    { name = "Isabl Team", email = "support@isabl.io" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "isabl",
    "genomics",
    "bioinformatics",
    "ai",
    "llm",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/isabl-io/isabl-ai-integration"
Documentation = "https://github.com/isabl-io/isabl-ai-integration/tree/main/mcp-server#readme"
Repository = "https://github.com/isabl-io/isabl-ai-integration.git"
Issues = "https://github.com/isabl-io/isabl-ai-integration/issues"
Changelog = "https://github.com/isabl-io/isabl-ai-integration/blob/main/CHANGELOG.md"

[project.scripts]
isabl-mcp = "isabl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isabl_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/isabl_mcp",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
